Fix dynamic changes to generated content.  Bug 57226, r=dbaron, sr=kin